# timu

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cpu.py  dev.Dockerfile  docker-compose.yaml  rustfmt.toml  test.asm  test.c  test.s
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
assets/: timu.pest
crates/libtimu/: Cargo.toml
crates/libtimu-macros/: Cargo.toml
crates/libtimu-macros-core/: Cargo.toml
crates/libtimu-macros-core/src/: lib.rs  traits.rs
crates/libtimu-macros/src/: lib.rs
crates/libtimu-macros/src/error/: mod.rs
crates/libtimu/src/: ast.rs  error.rs  file.rs  lib.rs  map.rs  nom_tools.rs  span.rs
crates/libtimu/src/parser/: body.rs  class.rs  expression.rs  extend.rs  field.rs  file.rs  function_call.rs  function_definition.rs  if_condition.rs  interface.rs  mod.rs  module_use.rs  primitive.rs  ref_info.rs  splited_path.rs  type_info.rs  variable.rs
crates/libtimu/src/tests/: lang_files.rs  mod.rs
crates/libtimu/src/tests/parser/: class_definition.rs  edge_cases.rs  expression.rs  function_definition.rs  interface_definition.rs  mod.rs  module_use.rs  primitive.rs  type_info.rs  variable_assign.rs
crates/libtimu/src/tests/tir/: error_handling.rs  mod.rs  type_resolution.rs
crates/libtimu/src/tir/: accessibility.rs  ast_signature.rs  context.rs  error.rs  mod.rs  module.rs  new_error.rs  object_signature.rs  scope.rs  signature.rs
crates/libtimu/src/tir/resolver/: class.rs  extend.rs  function.rs  interface.rs  mod.rs  module.rs  module_use.rs  statement.rs
crates/libtimu/src/tir/resolver/statement/: function_call.rs  mod.rs
crates/libtimu/tests/: integration_tests.rs
crates/timuc/: Cargo.toml
crates/timuc/src/: main.rs
internals/: error_handling.md
lang/: accessibility_test.tim  comprehensive_lib.tim  error_test.tim  lib.tim  main.tim  main_public.tim  simple_main.tim  test.tim  test_lib.tim  test_main.tim  test_private_imports.tim  test_public_imports.tim  test_public_visibility.tim  testlib.tim  testmain.tim  testprivate.tim  testprivatefunc.tim
src/: ast.rs  backend.rs  codegen.rs  cpu.rs  error.rs  file.rs  il.rs  main.rs  nom_parser.rs  nom_tools.rs  parser.rs  span.rs  vm.rs  x86_doc.rs
src/cpu/: bus.rs  memory.rs  mod.rs  test.rs
src/cpu/tests/: add.rs  memory.rs  mod.rs  mov.rs
src/format/: elf.rs  mach_o.rs  mod.rs
src/parser/: binary.rs  body.rs  class.rs  control.rs  expression.rs  extend.rs  field.rs  file.rs  function_call.rs  function_definition.rs  functions.rs  if_condition.rs  interface.rs  mod.rs  module_use.rs  primitive.rs  ref_info.rs  splited_path.rs  type_info.rs  variable.rs
src/tests/parser/: class_definition.rs  function_definition.rs  interface_definition.rs  mod.rs  primitive.rs  type_definition.rs  variable_assign.rs  variable_definition.rs
src/tir/: ast_signature.rs  context.rs  error.rs  mod.rs  module.rs  object_signature.rs  signature.rs
src/tir/builder/: mod.rs
src/tir/resolver/: class_definition.rs  extend_definition.rs  function.rs  function_definition.rs  interface.rs  interface_definition.rs  mod.rs  module_definition.rs  module_use.rs
