[package]
name = "timu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8"
pest_derive = "2.8"
# miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "2.0.0"
anyhow = "1.0.71"
bitmask-enum = "2.2.4"
num_enum = "0.7.3"
lazy_static = "1.5.0"
os_info = { version = "3", default-features = false }
inkwell = { version =  "0.5.0", features = ["llvm18-0"] }


[dev-dependencies]
rstest = "0.22.0"
pretty_assertions = "1.4.1"