[package]
name = "timu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# miette = { version = "5.9.0", features = ["fancy"] }
ariadne = "0.5.1"
#inkwell = { version =  "0.5.0", features = ["llvm18-0"] }
nom = "8.0.0"
nom_locate = "5.0.0"
nom-language = "0.1.0"
minimal-lexical = "0.2.1"
log = "0.4.27"
simplelog = { version = "^0.12.2", features = ["paris"] }

[dev-dependencies]
rstest = "0.25.0"
pretty_assertions = "1.4.1"
