[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
authors = ["Erhan BARIS"]
description = ""
documentation = ""
edition = "2024"

[workspace.dependencies]
codespan-reporting = "0.12.0"
miette = { version = "7.6.0", features = ["fancy"] }
#inkwell = { version =  "0.5.0", features = ["llvm18-0"] }
nom = "8.0.0"
nom_locate = "5.0.0"
nom-language = "0.1.0"
minimal-lexical = "0.2.1"
log = "0.4.27"
simplelog = { version = "^0.12.2", features = ["paris"] }
indexmap = "2.9.0"
thiserror = "2.0.12"
darling = "0.20.11"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "parsing"] }
proc-macro2 = "1.0.95"
deluxe = "0.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
rstest = "0.25.0"
pretty_assertions = "1.4.1"
