[package]
name = "libtimu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtimu-macros = { path = "../libtimu-macros" }
libtimu-macros-core = { path = "../libtimu-macros-core" }
miette = { version = "7.6.0", features = ["fancy"] }
#inkwell = { version =  "0.5.0", features = ["llvm18-0"] }
nom = "8.0.0"
nom_locate = "5.0.0"
nom-language = "0.1.0"
minimal-lexical = "0.2.1"
log = "0.4.27"
simplelog = { version = "^0.12.2", features = ["paris"] }
indexmap = "2.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
pretty_assertions = "1.4.1"
