[package]
name = "libtimu"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtimu-macros = { path = "../libtimu-macros" }
libtimu-macros-core = { path = "../libtimu-macros-core" }
miette = { version = "7.6.0", features = ["fancy"] }
#inkwell = { version =  "0.5.0", features = ["llvm18-0"] }
nom = { workspace = true }
nom_locate = { workspace = true }
nom-language = { workspace = true }
minimal-lexical = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
indexmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
codespan-reporting = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
