[package]
name = "libtimu"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtimu-macros = { path = "../libtimu-macros" }
libtimu-macros-core = { path = "../libtimu-macros-core" }
#inkwell = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
nom-language = { workspace = true }
minimal-lexical = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
indexmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
codespan-reporting = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
