[package]
name = "timuc"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
libtimu = { path = "../libtimu" }
libtimu-macros = { path = "../libtimu-macros" }
libtimu-macros-core = { path = "../libtimu-macros-core" }

#inkwell = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
nom-language = { workspace = true }
minimal-lexical = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
